# RocketSimVis

./: .gitignore  README_WEB.md  START_WEB.md  networking-format.md  package-lock.json  package.json  pyproject.toml  server.js  test_data.py
src/: main.py  socket_listener.py  states.py  ui.py
web/: index.html  package-lock.json  package.json  vite.config.js
web/src/: App.css  App.jsx  index.css
web/src/components/: Arena.jsx  Ball.jsx  BoostPad.jsx  Car.jsx  ConnectionStatus.css  ConnectionStatus.jsx  InfoPanel.css  InfoPanel.jsx  RewardsPanel.css  RewardsPanel.jsx  Scene.jsx
web/src/hooks/: useGameState.js
web/src/utils/: math.js
