[project]
name = "rocketsimvis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "moderngl-window>=3.1.1",
    "numpy>=2.4.1",
    "pyopengl>=3.1.10",
    "pyqt5>=5.15.11",
    "pyrr>=0.10.3",
    "pywavefront>=1.3.3",
]
